# JSON-Extractor

./: .gitignore  CMakeLists.txt  GEMINI.md  Note.md  README.md  Request.md  draw_graph_updated.py  module_simple-2_1_1.json  module_simple-2_2_1.json  module_simple-2_2_2.json  module_test_5_1.json  module_test_z_8_1.json  plans.md  test.json
.github/workflow/: deploy.yml
docs/: index.html
example/: 测试报告.md
example/基础功能测试/: branch_6nodes.json  cycle_4nodes.json  simple_3nodes.json
example/性能测试/: edge_cases.json  large_complex_graph.json
example/高级功能测试/: ignore_z_property.json  mixed_connections.json  nested_groups.json
include/: CoreAlgor.h  IOprocess.h
src/: CoreAlgor.cpp  IOprocess.cpp  main.cpp
test/: simple-2.json  simple.json  test.json
